# minica-api

./: pyproject.toml
