[tool.poetry]
name = "minica-api"
version = "1.0.1"
description = "A simple API to wrap jsha/minica"
authors = [
"Bjørn Snoen <bjorn.snoen@gmail.com>",
"Alexandre BERREBI <alexandre.berrebi@arbreagile.fr>",
]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.110" }
cryptography = "^42.0"
toml = "^0.10"
docker = "^7.0"
supervisor = "^4.2"
minicapy = "^1.1.2"
paho-mqtt = "^2.0"
inflect = "^7.0"

[tool.poetry.dev-dependencies]
black = "^24.2"
isort = "^5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
